Split into an injectable lib and a test app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
-project(appshot
+project(injeqt
     VERSION 0.1.0
-    DESCRIPTION "Test scripted app screenshots")
+    DESCRIPTION "Inject code in a Qt app")
 
 # Dependencies
 find_package(Qt5 CONFIG REQUIRED Core Widgets Qml)
@@ -9,29 +9,9 @@ find_package(Qt5 CONFIG REQUIRED Core Widgets Qml)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 
-# Sources
-set(appshot_SRCS
-    main.cpp
-    MainWindow.cpp
-    MainWindow.ui
-    ScriptRunner.cpp
-    Tools.cpp
-    )
-
-# Building
-include_directories(
-    ${CMAKE_CURRENT_BINARY_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    )
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Woverloaded-virtual")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
 set(CMAKE_CXX_STANDARD 17)
-add_executable(appshot ${appshot_SRCS})
 
-target_link_libraries(appshot Qt5::Core Qt5::Widgets Qt5::Qml)
-
-# Install
-install(TARGETS appshot
-    DESTINATION bin
-    )
+add_subdirectory(injeqt)
+add_subdirectory(testapp)
