--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(injeqt
+project(sinta
     VERSION 0.1.0
     DESCRIPTION "Inject code in a Qt app")
 
@@ -13,5 +13,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Woverloaded-virtual")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(injeqt)
+add_subdirectory(sinta)
 add_subdirectory(testapp)
