--- a/sinta/CMakeLists.txt
+++ b/sinta/CMakeLists.txt
@@ -3,6 +3,8 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     )
 
+configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+
 add_library(sintalib SHARED
     Injector.cpp
     ScriptRunner.cpp
