Install lib and launcher, find lib in install dir

--- a/sinta/CMakeLists.txt
+++ b/sinta/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(
 
 configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
+# sintalib
 add_library(sintalib SHARED
     Injector.cpp
     ScriptRunner.cpp
@@ -13,5 +14,9 @@ add_library(sintalib SHARED
 
 target_link_libraries(sintalib Qt5::Core Qt5::Widgets Qt5::Qml)
 
+install(TARGETS sintalib DESTINATION lib)
+
+# sinta
 add_executable(sinta main.cpp)
 target_link_libraries(sinta Qt5::Core)
+install(TARGETS sinta DESTINATION bin)
